# test_access_ss_from_cloudbuild_dbt

./: .gitignore  README.md  cloudbuild.yaml  main.tf  provider.tf  pyproject.toml  variables.tf
test_access_ss_from_cloudbuild_dbt/: dbt_project.yml  profiles.yml
test_access_ss_from_cloudbuild_dbt/models/example/: pivot_table_using_ss.sql  sources.yml
